# cecil-ai-quant

./: .env.example  .gitignore  .vercelignore  PORTFOLIO_ANALYSIS_USAGE.md  README.md  pyproject.toml  requirements.txt  vercel.json
api/: index.py
assets/fidelity-february/: History_for_Account_Z23193615.csv  Portfolio_Positions_Feb-14-2026.csv
frontend/: next.config.ts  package-lock.json  package.json
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/chat/: page.tsx
frontend/src/components/: AgentBadge.tsx  AgentFlowVisualizer.tsx  AgentStepCard.tsx  AppShell.tsx  FileUploader.tsx  MarkdownRenderer.tsx  Sidebar.tsx
frontend/src/contexts/: AuthContext.tsx
scripts/: check_fireworks_models.py  test_api_keys.py  test_groq_tools.py
src/cecil/: __init__.py  config.py  main.py
src/cecil/agents/: __init__.py  base.py  portfolio_analyst.py  project_manager.py  quant_researcher.py  research_intelligence.py  software_developer.py
src/cecil/backtest/: compare_strategies.py  comparison_20260212_003004.txt
src/cecil/graph/: __init__.py  builder.py  nodes.py  routing.py
src/cecil/models/: __init__.py  client.py  dynamic_loader.py  providers.py
src/cecil/state/: __init__.py  schema.py
src/cecil/tools/: __init__.py  code_execution.py  computation.py  factor_analysis.py  factors.py  financial.py  news.py  yahoo_finance.py
src/cecil/utils/: __init__.py  console_formatter.py  file_parser.py  html_report.py  logger.py  pdf_report.py
supabase/: 002_chat_attachments_storage.sql  migration.sql
(+4 files in other folders)
