[project]
name = "cecil-ai"
version = "0.1.0"
description = "Multi-agent financial research system powered by LangGraph"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-community>=0.3.0",
    "httpx>=0.27.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pandas>=2.0",
    "numpy>=1.26",
    "yfinance>=0.2.30",
    "feedparser>=6.0",
    "python-dotenv>=1.0",
    "tenacity>=8.0",
    "structlog>=24.0",
    "requests>=2.31.0",
    "reportlab>=4.0.0",
    "matplotlib>=3.8.0",
    "pillow>=10.0.0",
    "pypdf>=4.0.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "ruff", "mypy"]

[tool.hatch.build.targets.wheel]
packages = ["src/cecil"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
